Added in status selection + add-to-list flow on search and trending pages. Enhanced account page with status filter, per-status counts, inline status updates, and remove action. Refactored list management API calls with typed payloads and authenticated requests. Fixed a backend CORS config to allow PATCH preflight for status updates Updated backend controller tests for new auth dependencies. Added UserMusicListController tests for get/add/update-status/delete endpoints, and update